<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bangtiray.submitmovcatuiux.BlankFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:text="@string/setup_notif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Switch

        android:layout_marginTop="10dp"
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setDailyLabel"
        android:soundEffectsEnabled="true"/>
        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/upcoming_notif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Switch
            android:layout_marginTop="10dp"
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setDailyLabel"
            android:soundEffectsEnabled="true"/>

    </LinearLayout>

</FrameLayout>
